# geister-rs

./: Cargo.toml
ai/: Cargo.toml
ai/src/: gpw.rs  lib.rs  metadata.rs  random.rs  rnghandle.rs  yowagoshi.rs
core/: Cargo.toml
core/src/: board.rs  error.rs  lib.rs  player.rs  simulator.rs
gpw-proto/: Cargo.toml
gpw-proto/src/: lib.rs
